# kinginformation-dq3-re

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md
.github/workflows/: ci.yml  macos.yml
docs/: 00-re-methodology.md  01-asset-inventory.md  02-font-format.md  03-text-format.md  04-map-format.md  05-exe-recon.md  06-exe-callmap.md  07-dpmi-note.md  08-exe-functions.md  09-exe-loaders.md  10-exe-states.md  11-exe-gameplay.md  12-exe-commands.md  13-exe-battle.md  14-dosbox-validation.md  15-exe-nameinput.md  16-monsters-ui.md  17-build-toolchain.md  18-bug-analysis.md  19-re-correctness.md  20-fixed-version.md  21-official-patches.md  22-item-fix.md  23-stat-fixes.md  24-c-rebuild.md  25-match-progress.md  27-bls-character-sprites.md  28-battle-palette-bug.md  29-dosbox-oracle.md  30-phase5-comparison.md  31-event-system.md  32-world-locations.md  33-name-tables.md  34-cty-load-format.md  35-script-format.md  36-original-tavern-playthrough.md  37-monster-ai.md  38-monster-stats.md  39-encounter-zones.md  40-facility-shops.md  (+25 more)
docs/data/: D3TXT00_codes.txt  D3TXT01_codes.txt  D3TXT02_codes.txt  D3TXT03_codes.txt  D3TXT04_codes.txt  D3TXT05_codes.txt  D3TXT06_codes.txt  D3TXT07_codes.txt  D3TXT08_codes.txt  D3TXT09_codes.txt  boss-trigger-points.md  bug_patches.json  china_d3txt00_anchors.tsv  codecave_patches.json  d3mns_stats.json  d3txt_codes.json  day-night-system.md  dgroup-tables.md  endtxt-incomplete.md  exe_funcs.json  glyph_uncertain.json  glyph_unicode_map.json  npc_dialogue.json  official_patches.json  oracle-validation.md  original-known-bugs.md  quest-items.md  special-events-audit.md  special-events-classified.json  spell-effects-research.md  stat_patches.json  sub2-handlers.md  sub2-npcs-live.md  sub2-struct.md  walkthrough-flow-audit.md
docs/history/: dq3-bbs-1994.md  dq3-walkthrough-credits.md
docs/maps/: cty-names.md  cty_name_fill.md  map_graph.json  map_graph.md
docs/maps/cty/: README.md
docs/script/: README.md  txt00.txt  txt01.txt  txt02.txt  txt03.txt  txt04.txt  txt05.txt  txt06.txt  txt07.txt  txt08.txt  txt09.txt
docs/title/: README.md
dq3_remake/: .gitignore  AUDIO_WORKLIST.md  CMakeLists.txt  DEV-SETUP.md  DIST_README.md  HANDOFF.md  PACKAGING_WORKLIST.md  WORKLIST.md
dq3_remake/cmake/: mingw-w64-x86_64.cmake
dq3_remake/include/: dq3_assets.h  dq3_battle.h  dq3_battlescene.h  dq3_cmdmenu.h  dq3_combat.h  dq3_config.h  dq3_customglyph.h  dq3_dialogue.h  dq3_encounter.h  dq3_exedata.h  dq3_field.h  dq3_inventory.h  dq3_item_use.h  dq3_locwarp.h  dq3_menu.h  dq3_monster.h  dq3_nameinput.h  dq3_npc.h  dq3_owportal.h  dq3_packbg.h  dq3_progress.h  dq3_restored_sprites.h  dq3_rng.h  dq3_roster.h  dq3_runtime.h  dq3_save.h  dq3_scene.h  dq3_scripted.h  dq3_ship.h  dq3_shopdata.h  dq3_spell.h  dq3_sprite.h  dq3_stats.h  dq3_status.h  dq3_sub2.h  dq3_tavern.h  dq3_text.h  dq3_town.h  dq3_treasure.h  dq3_warp.h  (+1 more)
dq3_remake/scripts/: Dockerfile  Dockerfile.mingw  build.sh
dq3_remake/src/: dq3_audio.c  dq3_audio.h  dq3_battle.c  dq3_battlescene.c  dq3_blk.c  dq3_cmdmenu.c  dq3_cmf.c  dq3_cmf.h  dq3_combat.c  dq3_config.c  dq3_customglyph.c  dq3_dialogue.c  dq3_encounter.c  dq3_exedata.c  dq3_field.c  dq3_font.c  dq3_inventory.c  dq3_item_use.c  dq3_locwarp.c  dq3_menu.c  dq3_monster.c  dq3_nameinput.c  dq3_npc.c  dq3_opl2.c  dq3_opl2.h  dq3_owportal.c  dq3_packbg.c  dq3_pal.c  dq3_pcx.c  dq3_progress.c  dq3_restored_sprites.c  dq3_rng.c  dq3_roster.c  dq3_runtime.c  dq3_save.c  dq3_scene.c  dq3_scripted.c  dq3_ship.c  dq3_shopdata.c  dq3_spell.c  (+33 more)
dq3_remake_ebitan/: README.md  build.sh  go.mod  main.go
dq3_remake_ebitan/internal/dq3data/: blk.go  blk_test.go  bls.go  bls_test.go  fieldmap.go  fieldmap_test.go  palette.go  palette_test.go
re/: assets.h  battle.c  battle.h  commands.c  commands.h  exe.h  gameplay.h  loaders.c  mainloop.c  nameinput.c  nameinput.h  player.c  render.c  startup.c  states.c  states.h
re/match/: sub_32a3.c  sub_e6b9.c  sub_e91e.c  sub_e96d.c  sub_edab.c
re/sdl/: CMakeLists.txt  dq3_pcx.c  dq3_pcx.h  dq3_runtime.c  dq3_runtime.h  sdl_main.c
references/: README.md
references/walkthroughs/: README.md  dusheng_dq3.html  dusheng_dq3.txt
tools/: Dockerfile.munt  _big.py  analyze_reachability.py  analyze_terrain.py  bls_charsheet.py  bls_class_summary.py  bls_probe.py  bls_probe2.py  bls_probe3.py  bls_probe4.py  bls_probe5.py  build_fixed_version.py  cmf_render.py  cmf_to_midi.py  cmp_title.py  decode_sub2_struct.py  dis.sh  dis_full.py  dis_handler_full.py  dis_region.py  dis_sub2_handler.py  dockrun.sh  dockrun_cap.sh  dosbox.conf  dosbox_boot_check.sh  dosbox_houseexit.sh  dosbox_ingame.sh  dosbox_nameinput.sh  dosbox_run.sh  dosbox_tavern_explore.sh  dosbox_tavern_full.sh  dosbox_to_overworld.sh  dosbox_walk_test.sh  dosbox_warp_cty.sh  export_mt32_wav.sh  export_music.sh  export_music_mt32.sh  extract_cmf.py  extract_dgroup_tables.py  extract_map_graph.py  (+112 more)
tools/reasm/: disasm_to_nasm.py  exe_to_nasm.py  mz_roundtrip.py  reasm_full.sh  reasm_ks.py  reasm_verify.py
